RESOLVED FIXED20405
[Cairo] fill and stroke colors doen't work in Canvas
https://bugs.webkit.org/show_bug.cgi?id=20405
Summary [Cairo] fill and stroke colors doen't work in Canvas
Dirk Schulze
Reported 2008-08-15 13:03:05 PDT
After the clean up https://bugs.webkit.org/show_bug.cgi?id=20351 fill and stroke-colors don't work in Cairo.
Attachments
Fix Canvas in Cairo (2.49 KB, patch)
2008-08-15 13:06 PDT, Dirk Schulze
eric: review+
Dirk Schulze
Comment 1 2008-08-15 13:06:10 PDT
Created attachment 22824 [details] Fix Canvas in Cairo Fix fill and stroke-colors.
Eric Seidel (no email)
Comment 2 2008-08-15 13:11:08 PDT
Comment on attachment 22824 [details] Fix Canvas in Cairo Sad that we have to add more #ifdef'd code. Eventually we'll add a strokePath() call to GraphicsContext.
Jan Alonzo
Comment 3 2008-08-18 04:20:28 PDT
landed in r35817
Note You need to log in before you can comment on or make changes to this bug.