2008-08-18  Dirk Schulze  <vbs85@gmx.de>

Reviewed by Eric Seidel.

        Fixed Canvas for Cairo. Stroke and fill colors didn't work after
        the canvas clean up.

        https://bugs.webkit.org/show_bug.cgi?id=20405

        * html/CanvasRenderingContext2D.cpp:
        (WebCore::CanvasRenderingContext2D::fill):
        (WebCore::CanvasRenderingContext2D::stroke):
        (WebCore::CanvasRenderingContext2D::fillRect):

Canonical link: https://commits.webkit.org/28225@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@35817 268f45cc-cd09-0410-ab3c-d52691b4dbfc